<resources>
    <string name="app_name">Loggd</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

<<<<<<< Updated upstream
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
    <string name="your_current_spending">Your current spending</string>
    <string name="this_month">This month</string>
    <string name="amount">IDR 2.500.000,00</string>
    <string name="today_spend">Today spend</string>
    <string name="today_amount">IDR 88.000,00</string>
    <string name="overall_usage">Overall usage</string>
    <string name="textview">TextView</string>
>>>>>>> Stashed changes
</resources>
