<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/your_current_spending"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:cardBackgroundColor="#1eadd9"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="#ffff00"
                android:text="@string/this_month"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/current_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="40dp"
                android:text="@string/amount"
                android:textSize="14sp" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_weight="0.5"
                app:cardBackgroundColor="#4be046"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="#ffff00"
                    android:text="@string/today_spend"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/today_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="40dp"
                    android:text="@string/today_amount"
                    android:textSize="14sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_weight="0.5"
                app:cardBackgroundColor="#c761c2"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="#ffff00"
                    android:text="@string/overall_usage"
                    android:textColor="@android:color/black" />

                <ProgressBar
                    android:id="@+id/determinateBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="42dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="10" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>